--- a/src/scss/icons/variables.scss
+++ b/src/scss/icons/variables.scss
@@ -1,70 +1,73 @@
 $icomoon-font-family: "donshina" !default;
 $icomoon-font-path: "../fonts" !default;
 
-$ds-icon-arrow-left: "\e900";
-$ds-icon-arrow-right: "\e901";
-$ds-icon-arrow-prev: "\e902";
+$ds-icon-allseason-path1: "\e900";
+$ds-icon-allseason-path2: "\e901";
+$ds-icon-arrow-left: "\e902";
 $ds-icon-arrow-next: "\e903";
-$ds-icon-checked: "\e904";
-$ds-icon-exit: "\e906";
-$ds-icon-car: "\e907";
-$ds-icon-moto: "\e908";
-$ds-icon-cart: "\e909";
-$ds-icon-delivery: "\e90a";
-$ds-icon-compare: "\e90b";
-$ds-icon-credit: "\e90c";
-$ds-icon-shield: "\e90d";
-$ds-icon-services: "\e90e";
-$ds-icon-plane: "\e90f";
-$ds-icon-placemark: "\e910";
-$ds-icon-tile: "\e911";
-$ds-icon-user: "\e912";
-$ds-icon-eye: "\e913";
-$ds-icon-oil: "\e914";
-$ds-icon-tires: "\e915";
-$ds-icon-wheels: "\e916";
-$ds-icon-repair: "\e917";
-$ds-icon-battery: "\e918";
-$ds-icon-card: "\e919";
+$ds-icon-arrow-prev: "\e904";
+$ds-icon-arrow-right: "\e905";
+$ds-icon-attention: "\e906";
+$ds-icon-battery: "\e907";
+$ds-icon-car: "\e908";
+$ds-icon-card: "\e909";
+$ds-icon-cart: "\e90a";
+$ds-icon-case: "\e90b";
+$ds-icon-checked: "\e90c";
+$ds-icon-compare: "\e90d";
+$ds-icon-credit: "\e90e";
+$ds-icon-delivery: "\e90f";
+$ds-icon-dropdown: "\e910";
+$ds-icon-email: "\e911";
+$ds-icon-emoji: "\e912";
+$ds-icon-exit: "\e913";
+$ds-icon-eye: "\e914";
+$ds-icon-facebook: "\e915";
+$ds-icon-favourite: "\e916";
+$ds-icon-filter: "\e917";
+$ds-icon-founding-path1: "\e918";
+$ds-icon-founding-path2: "\e919";
 $ds-icon-gift: "\e91a";
-$ds-icon-list: "\e91b";
-$ds-icon-menu: "\e91c";
-$ds-icon-filter: "\e91d";
-$ds-icon-attention: "\e91e";
-$ds-icon-case: "\e91f";
-$ds-icon-email: "\e920";
-$ds-icon-emoji: "\e921";
-$ds-icon-favourite: "\e922";
-$ds-icon-scales: "\e923";
-$ds-icon-settings: "\e925";
-$ds-icon-target: "\e926";
-$ds-icon-time: "\e927";
-$ds-icon-trash: "\e928";
+$ds-icon-instagram: "\e91b";
+$ds-icon-iron: "\e91c";
+$ds-icon-list: "\e91d";
+$ds-icon-logo-path1: "\e91e";
+$ds-icon-logo-path2: "\e91f";
+$ds-icon-logo-path3: "\e920";
+$ds-icon-logo-path4: "\e921";
+$ds-icon-logo-path5: "\e922";
+$ds-icon-logo-path6: "\e923";
+$ds-icon-menu: "\e924";
+$ds-icon-moto: "\e925";
+$ds-icon-nonspikes: "\e926";
+$ds-icon-oil: "\e927";
+$ds-icon-phone: "\e928";
 $ds-icon-phone-nobg: "\e929";
-$ds-icon-phone: "\e92a";
-$ds-icon-instagram: "\e92b";
-$ds-icon-facebook: "\e92c";
-$ds-icon-youtube: "\e92d";
-$ds-icon-vk: "\e92e";
-$ds-icon-wapp-filled: "\e92f";
-$ds-icon-wapp: "\e930";
-$ds-icon-tg-filled: "\e931";
-$ds-icon-tg: "\e932";
-$ds-icon-logo-path1: "\e933";
-$ds-icon-logo-path2: "\e934";
-$ds-icon-logo-path3: "\e935";
-$ds-icon-logo-path4: "\e936";
-$ds-icon-logo-path5: "\e937";
-$ds-icon-logo-path6: "\e938";
-$ds-icon-summer: "\e939";
-$ds-icon-winter: "\e93a";
-$ds-icon-allseason-path1: "\e93b";
-$ds-icon-allseason-path2: "\e93c";
-$ds-icon-spikes: "\e93d";
-$ds-icon-nonspikes: "\e93e";
-$ds-icon-steel-path1: "\e93f";
-$ds-icon-steel-path2: "\e940";
-$ds-icon-founding-path1: "\e941";
-$ds-icon-founding-path2: "\e942";
-$ds-icon-iron: "\e943";
-
+$ds-icon-placemark: "\e92a";
+$ds-icon-plane: "\e92b";
+$ds-icon-repair: "\e92c";
+$ds-icon-scales: "\e92d";
+$ds-icon-search: "\e92e";
+$ds-icon-services: "\e92f";
+$ds-icon-settings: "\e930";
+$ds-icon-shield: "\e931";
+$ds-icon-spikes: "\e932";
+$ds-icon-steel-path1: "\e933";
+$ds-icon-steel-path2: "\e934";
+$ds-icon-summer: "\e935";
+$ds-icon-target: "\e936";
+$ds-icon-tg: "\e937";
+$ds-icon-tg-filled: "\e938";
+$ds-icon-tile: "\e939";
+$ds-icon-time: "\e93a";
+$ds-icon-tires: "\e93b";
+$ds-icon-tool: "\e93c";
+$ds-icon-trash: "\e93d";
+$ds-icon-user: "\e93e";
+$ds-icon-vk: "\e93f";
+$ds-icon-wapp: "\e940";
+$ds-icon-wapp-filled: "\e941";
+$ds-icon-warranty: "\e942";
+$ds-icon-wheels: "\e943";
+$ds-icon-winter: "\e944";
+$ds-icon-youtube: "\e945";
