--- a/src/pug/personal-bonus.pug
+++ b/src/pug/personal-bonus.pug
@@ -40,5 +40,4 @@ block personal
   .section.text-center.py-2.mb-5
     a.readmore.h4.d-flex.align-items-center.justify-content-center.color-theme-brand.pr-0(href="#")
       span.mr-1 Показать всю историю операций
-      span.d-block(style="width:20px;height:20px;")
-        +svg('readmore')
+      +icon('readmore','h3')
