--- a/src/pug/personal-orders.pug
+++ b/src/pug/personal-orders.pug
@@ -38,8 +38,8 @@ block personal
           span.table-row__title.d-block.d-md-none Статус заказа:
           span.color-theme-success Ожидает отгрузки
         .table-row__col.d-none.d-md-block.pos-rel.order-md-7
-          span.readmore.readmore_centered.d-block.color-theme-brand(style="width:20px;height:20px;")
-            +svg('readmore')
+          span.readmore.readmore_centered.d-block.color-theme-brand
+            +icon('readmore','h3')
       .table-row__body
         .box-shadow.border-radius.overflow-hidden.pt-4.mb-2
           .border-bottom.px-3.pb-3.mb-3
@@ -47,8 +47,8 @@ block personal
               .heading__col
                 .h3.font-weight-bold.color-theme-brand Заказ # 837258628
               .heading__col.pos-rel
-                span.readmore.readmore_centered.d-block.color-theme-brand(style="width:20px;height:20px;")
-                  +svg('readmore-reversed')
+                span.readmore.readmore_centered.d-block.color-theme-brand
+                  +icon('readmore-reversed','h3')
             .desclist
               .d-flex.align-items-center.mb-2
                 .desclist__title.h5.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Дата заказа:
@@ -134,8 +134,8 @@ block personal
           span.table-row__title.d-block.d-md-none Статус заказа:
           span.color-theme-brand Ожидает обработки
         .table-row__col.d-none.d-md-block.pos-rel.order-md-7
-          span.readmore.readmore_centered.d-block.color-theme-brand(style="width:20px;height:20px;")
-            +svg('readmore')
+          span.readmore.readmore_centered.d-block.color-theme-brand
+            +icon('readmore','h3')
       .table-row__body
         .box-shadow.border-radius.overflow-hidden.pt-4.mb-2
           .border-bottom.px-3.pb-3.mb-3
@@ -143,8 +143,8 @@ block personal
               .heading__col
                 .h3.font-weight-bold.color-theme-brand Заказ #
               .heading__col.pos-rel
-                span.readmore.readmore_centered.d-block.color-theme-brand(style="width:20px;height:20px;")
-                  +svg('readmore-reversed')
+                span.readmore.readmore_centered.d-block.color-theme-brand
+                  +icon('readmore-reversed','h3')
 
   .mb-3
     .h2.font-weight-bold.text-center.mb-4 История заказа
@@ -169,8 +169,8 @@ block personal
           span.table-row__title.d-block.d-md-none Статус заказа:
           | Готово
         .table-row__col.d-none.d-md-block.pos-rel.order-md-7
-          span.readmore.readmore_centered.d-block.color-theme-brand(style="width:20px;height:20px;")
-            +svg('readmore')
+          span.readmore.readmore_centered.d-block.color-theme-brand
+            +icon('readmore','h3')
       .table-row__body
         .box-shadow.border-radius.overflow-hidden.pt-4.mb-2
           .border-bottom.px-3.pb-3.mb-3
@@ -178,8 +178,8 @@ block personal
               .heading__col
                 .h3.font-weight-bold.color-theme-brand Заказ # 837258628
               .heading__col.pos-rel
-                span.readmore.readmore_centered.d-block.color-theme-brand(style="width:20px;height:20px;")
-                  +svg('readmore-reversed')
+                span.readmore.readmore_centered.d-block.color-theme-brand
+                  +icon('readmore-reversed','h3')
 
     .table-row
       .table-row__header.table-row__header_order.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3
@@ -204,8 +204,8 @@ block personal
           span.table-row__title.d-block.d-md-none Статус заказа:
           | Готово
         .table-row__col.d-none.d-md-block.pos-rel.order-md-7
-          span.readmore.readmore_centered.d-block.color-theme-brand(style="width:20px;height:20px;")
-            +svg('readmore')
+          span.readmore.readmore_centered.d-block.color-theme-brand
+            +icon('readmore','h3')
       .table-row__body
         .box-shadow.border-radius.overflow-hidden.pt-4.mb-2
           .border-bottom.px-3.pb-3.mb-3
@@ -213,8 +213,8 @@ block personal
               .heading__col
                 .h3.font-weight-bold.color-theme-brand Заказ # 837258628
               .heading__col.pos-rel
-                span.readmore.readmore_centered.d-block.color-theme-brand(style="width:20px;height:20px;")
-                  +svg('readmore-reversed')
+                span.readmore.readmore_centered.d-block.color-theme-brand
+                  +icon('readmore-reversed','h3')
 
     .table-row
       .table-row__header.table-row__header_order.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3
@@ -237,8 +237,8 @@ block personal
           span.table-row__title.d-block.d-md-none Статус заказа:
           | Готово
         .table-row__col.d-none.d-md-block.pos-rel.order-md-7
-          span.readmore.readmore_centered.d-block.color-theme-brand(style="width:20px;height:20px;")
-            +svg('readmore')
+          span.readmore.readmore_centered.d-block.color-theme-brand
+            +icon('readmore','h3')
       .table-row__body
         .box-shadow.border-radius.overflow-hidden.pt-4.mb-2
           .border-bottom.px-3.pb-3.mb-3
@@ -246,11 +246,11 @@ block personal
               .heading__col
                 .h3.font-weight-bold.color-theme-brand Заказ # 837258628
               .heading__col.pos-rel
-                span.readmore.readmore_centered.d-block.color-theme-brand(style="width:20px;height:20px;")
-                  +svg('readmore-reversed')
+                span.readmore.readmore_centered.d-block.color-theme-brand
+                  +icon('readmore-reversed','h3')
 
   .section.text-center.py-2.mb-5
     a.readmore.h4.d-flex.align-items-center.justify-content-center.color-theme-brand.pr-0(href="#")
       span.mr-1 Показать всю историю заказов
-      span.d-block(style="width:20px;height:20px;")
-        +svg('readmore')
+      span.d-block
+        +icon('readmore','h3')
