--- a/src/pug/ui_icons.pug
+++ b/src/pug/ui_icons.pug
@@ -86,6 +86,10 @@ block wrapper
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('plane')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('readmore')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('readmore-reversed')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('repair')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('scales')
@@ -106,9 +110,9 @@ block wrapper
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('target')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
-          +svg('tg')
+          +svg('tg-filled')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
-          +svg('tg-bordered')
+          +svg('tg')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('tile')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
@@ -122,9 +126,9 @@ block wrapper
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('vk')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
-          +svg('wapp')
+          +svg('wapp-filled')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
-          +svg('wapp-bordered')
+          +svg('wapp')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('wheels')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
@@ -218,6 +222,10 @@ block wrapper
           span.h1.ds-icon-placemark
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-plane
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-readmore
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-readmore-reversed
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-repair
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
