--- a/src/scss/icons/variables.scss
+++ b/src/scss/icons/variables.scss
@@ -45,29 +45,31 @@ $ds-icon-phone: "\e928";
 $ds-icon-phone-nobg: "\e929";
 $ds-icon-placemark: "\e92a";
 $ds-icon-plane: "\e92b";
-$ds-icon-repair: "\e92c";
-$ds-icon-scales: "\e92d";
-$ds-icon-search: "\e92e";
-$ds-icon-services: "\e92f";
-$ds-icon-settings: "\e930";
-$ds-icon-shield: "\e931";
-$ds-icon-spikes: "\e932";
-$ds-icon-steel-path1: "\e933";
-$ds-icon-steel-path2: "\e934";
-$ds-icon-summer: "\e935";
-$ds-icon-target: "\e936";
-$ds-icon-tg: "\e937";
-$ds-icon-tg-filled: "\e938";
-$ds-icon-tile: "\e939";
-$ds-icon-time: "\e93a";
-$ds-icon-tires: "\e93b";
-$ds-icon-tool: "\e93c";
-$ds-icon-trash: "\e93d";
-$ds-icon-user: "\e93e";
-$ds-icon-vk: "\e93f";
-$ds-icon-wapp: "\e940";
-$ds-icon-wapp-filled: "\e941";
-$ds-icon-warranty: "\e942";
-$ds-icon-wheels: "\e943";
-$ds-icon-winter: "\e944";
-$ds-icon-youtube: "\e945";
+$ds-icon-readmore: "\e92c";
+$ds-icon-readmore-reversed: "\e92d";
+$ds-icon-repair: "\e92e";
+$ds-icon-scales: "\e92f";
+$ds-icon-search: "\e930";
+$ds-icon-services: "\e931";
+$ds-icon-settings: "\e932";
+$ds-icon-shield: "\e933";
+$ds-icon-spikes: "\e934";
+$ds-icon-steel-path1: "\e935";
+$ds-icon-steel-path2: "\e936";
+$ds-icon-summer: "\e937";
+$ds-icon-target: "\e938";
+$ds-icon-tg: "\e939";
+$ds-icon-tg-filled: "\e93a";
+$ds-icon-tile: "\e93b";
+$ds-icon-time: "\e93c";
+$ds-icon-tires: "\e93d";
+$ds-icon-tool: "\e93e";
+$ds-icon-trash: "\e93f";
+$ds-icon-user: "\e940";
+$ds-icon-vk: "\e941";
+$ds-icon-wapp: "\e942";
+$ds-icon-wapp-filled: "\e943";
+$ds-icon-warranty: "\e944";
+$ds-icon-wheels: "\e945";
+$ds-icon-winter: "\e946";
+$ds-icon-youtube: "\e947";
