personal-vin.pug, price list

--- a/src/pug/personal-vin.pug
+++ b/src/pug/personal-vin.pug
@@ -18,6 +18,37 @@ block personal
         .col-xl-5.d-flex.justify-content-xl-end
           button.btn.text-uppercase(type="button") Оформить заказ
 
+  .h2.font-weight-bold.text-center.mb-4 Результаты подбора по VIN-коду
+  .section.py-0.mb-3
+    .border-bottom.px-md-4.px-3.py-md-4.py-3
+      .h3.font-weight-bold.color-theme-brand По вашему запросу был осуществен подбор запчастей (WAUBH54B11N111054):
+    .border-bottom.d-flex.align-items-center.justify-content-between.px-md-4.px-3.py-2
+      a.d-block.mr-3(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
+      .h3.d-flex
+        span.text-nowrap.font-weight-bold.mr-2 7 337.12
+        | ₽
+    .border-bottom.d-flex.align-items-center.justify-content-between.px-md-4.px-3.py-2
+      a.d-block.mr-3(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
+      .h3.d-flex
+        span.text-nowrap.font-weight-bold.mr-2 7 337.12
+        | ₽
+    .border-bottom.d-flex.align-items-center.justify-content-between.px-md-4.px-3.py-2
+      a.d-block.mr-3(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
+      .h3.d-flex
+        span.text-nowrap.font-weight-bold.mr-2 7 337.12
+        | ₽
+    .d-flex.align-items-center.justify-content-end.px-md-4.px-3.pt-3
+      .h6.mr-5 Итого:
+      .h3.d-flex
+        span.text-nowrap.font-weight-bold.mr-2 22 337.12
+        | ₽
+    .px-md-4.px-3.py-3
+      .row.align-items-center
+        .col-xl-7.mb-3.mb-xl-0
+          .h6.color-theme-disabled После оформления заказа с вами свяжется наш менеджер для уточнения деталей.
+        .col-xl-5.d-flex.justify-content-xl-end
+          button.btn.text-uppercase(type="button") Оформить заказ
+
   .section.py-0.mb-5
     .section__expander.d-flex.align-items-center.justify-content-between.cursor-pointer.px-md-4.px-3.py-2
       button.btn.btn_nobg.h4.p-0(type="button")
