modals: reg, auth, pwd, vin-code; sidebar styles

--- a/src/pug/personal-vin.pug
+++ b/src/pug/personal-vin.pug
@@ -57,7 +57,7 @@ block personal
       span.section__readmore.readmore.d-block.color-theme-brand
         +icon('readmore','h3')
     form.section__body(action="#")
-      .border-bottom.px-md-4.px-3.pt-md-4.pt-3
+      .form.border-bottom.px-md-4.px-3.pt-md-4.pt-3
         .row
           .col-md-5.d-flex.flex-column.justify-content-between
             .form__item.mb-4
