--- a/src/pug/personal.pug
+++ b/src/pug/personal.pug
@@ -20,7 +20,7 @@ block wrapper
     section.content
       h1 Личный кабинет
     .row.align-items-start
-      .col-xl-3.col-lg-4.mb-lg-4
+      .sidebar.col-xl-3.col-lg-4.mb-lg-4
         .filter.filter_sticky
           .filter__body
             nav.leftmenu
