--- a/src/scss/icons/variables.scss
+++ b/src/scss/icons/variables.scss
@@ -1,6 +1,7 @@
 $icomoon-font-family: "donshina" !default;
 $icomoon-font-path: "../fonts" !default;
 
+$ds-icon-close: "\e948";
 $ds-icon-allseason-path1: "\e900";
 $ds-icon-allseason-path2: "\e901";
 $ds-icon-arrow-left: "\e902";
