--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,7 @@ $grid-gutter-width: 8px;
 
 @import '~bootstrap/scss/bootstrap-reboot.scss';
 @import '~bootstrap/scss/bootstrap-grid.scss';
-//@import '~bootstrap/scss/modal';
+@import '~bootstrap/scss/modal';
 @import '~bootstrap/scss/images';
 @import '~bootstrap/scss/transitions';
 @import '~bootstrap/scss/utilities/text';
@@ -36,6 +36,7 @@ $grid-gutter-width: 8px;
 @import 'tpl/form';
 @import 'tpl/card';
 @import 'tpl/card-row';
+@import 'tpl/modal';
 @import 'tpl/promo';
 @import 'tpl/brand';
 @import 'tpl/media';
@@ -50,6 +51,7 @@ $grid-gutter-width: 8px;
 @import 'tpl/content';
 @import 'tpl/feature';
 @import 'tpl/wrapper';
+@import 'tpl/sidebar';
 @import 'tpl/pathway';
 @import 'tpl/topmenu';
 @import 'tpl/heading';
