--- a/src/scss/tpl/_header.scss
+++ b/src/scss/tpl/_header.scss
@@ -2,7 +2,7 @@
   @include offset(0 0 2.5rem,0 0 .75rem);
   @include pos(0,0,sticky);
   right: 0;
-  z-index: 1080;
+  z-index: 1040;
   transition: all .3s ease;
   background: #fff;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, .12);
@@ -153,9 +153,14 @@
 }
 
 .header__btn-title {
+  color: $color__link;
   overflow: hidden;
   //text-overflow: ellipsis;
   line-height: 1.25rem;
+
+  &:hover {
+    color: $color__brand;
+  }
 
   @include media-breakpoint-up(lg) {
     display: block;
