personal: auto, auto-models

--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -280,7 +280,10 @@ html(lang="ru")
   _swiper.scss - перебрать
   _card
   _tabs
+  _results
   _form - внутренние отступы и стили текста
+
+  выпадающие списки с возможностью автозаполнения - привести в порядок, например, заголовки
 
   пожать изображения
   поправить .readmore
