--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -161,7 +161,7 @@ block wrapper
                         .form__row.col-lg-10.offset-lg-1
                             .form__col.pr-md-4.pr-xl-0
                                 .dropdown.mb-4
-                                    select.car-selectd.d-none
+                                    select.car-select.d-none
                                         option Значение 1
                                         option Значение 2
                                         option Значение 3
@@ -195,7 +195,7 @@ block wrapper
                                                     a.dropdown-menu__list-option(role="option") Значение 5
                             .form__col.pr-md-4.pr-xl-0
                                 .dropdown.mb-4
-                                    select.car-selectd.d-none
+                                    select.car-select.d-none
                                         option Значение 1
                                         option Значение 2
                                         option Значение 3
@@ -217,7 +217,7 @@ block wrapper
                                                     a.dropdown-menu__list-option.selected(role="option") Значение 4
                             .form__col.pr-md-4.pr-xl-0
                                 .dropdown.mb-4
-                                    select.car-selectd.d-none
+                                    select.car-select.d-none
                                         option Значение 1
                                         option Значение 2
                                         option Значение 3
@@ -239,7 +239,7 @@ block wrapper
                                                     a.dropdown-menu__list-option.selected(role="option") Значение 4
                             .form__col.pr-md-4.pr-xl-0
                                 .dropdown.mb-4
-                                    select.car-selectd.d-none
+                                    select.car-select.d-none
                                         option Значение 1
                                         option Значение 2
                                         option Значение 3
