--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,6 +27,7 @@ $grid-gutter-width: 8px;
 @import 'icons/style';
 
 /* tpl */
+@import 'tpl/car';
 @import 'tpl/btn';
 @import 'tpl/icon';
 @import 'tpl/logo';
