--- a/src/pug/personal-auto-models.pug
+++ b/src/pug/personal-auto-models.pug
@@ -4,3 +4,160 @@ block meta
   - var title = 'Мой автомобиль (подбор по авто)';
 
 block personal
+  .h2.font-weight-bold.text-center.mb-4 Мой автомобиль
+  form.section.py-0.mb-3(zction="#")
+    .px-md-4.px-3.py-md-4.py-3
+      .h3.font-weight-bold.color-theme-brand Подробно заполненные данные вашего автомобиля сделают работу с сайтом удобнее и быстрее. Мы сможем предлагать товары и услуги подходящие именно Вам.
+    .border-bottom.mb-3
+      .d-flex.flex-wrap.pl-md-4.pl-3
+        .col-md-3.pl-0.pr-md-4.pr-3.mb-4
+          .dropdown
+            select.car-select.d-none
+              option Значение 1
+              option Значение 2
+              option Значение 3
+              option Значение 4
+              option Значение 5
+            button.dropdown-toggle(id="filter-cars-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Выберете марку
+            .dropdown-menu(aria-labelledby="filter-cars-dropdown")
+              .dropdown-menu__header.mb-2.bs-searchbox
+                input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
+              .dropdown-menu__body
+                ul.dropdown-menu__list
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 1
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 2
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 3
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 4
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 5
+        .col-md-3.pl-0.pr-md-4.pr-3.mb-4
+          .dropdown
+            select.car-select.d-none
+              option Значение 1
+              option Значение 2
+              option Значение 3
+              option Значение 4
+              option Значение 5
+            button.dropdown-toggle(id="filter-cars-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" disabled) Модель
+            .dropdown-menu(aria-labelledby="filter-cars-dropdown")
+              .dropdown-menu__header.mb-2.bs-searchbox
+                input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
+              .dropdown-menu__body
+                ul.dropdown-menu__list
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 1
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 2
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 3
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 4
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 5
+        .col-md-3.pl-0.pr-md-4.pr-3.mb-4
+          .dropdown
+            select.car-select.d-none
+              option Значение 1
+              option Значение 2
+              option Значение 3
+              option Значение 4
+              option Значение 5
+            button.dropdown-toggle(id="filter-cars-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" disabled) Кузов
+            .dropdown-menu(aria-labelledby="filter-cars-dropdown")
+              .dropdown-menu__header.mb-2.bs-searchbox
+                input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
+              .dropdown-menu__body
+                ul.dropdown-menu__list
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 1
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 2
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 3
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 4
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 5
+        .col-md-3.pl-0.pr-md-4.pr-3.mb-4
+          .dropdown
+            select.car-select.d-none
+              option Значение 1
+              option Значение 2
+              option Значение 3
+              option Значение 4
+              option Значение 5
+            button.dropdown-toggle(id="filter-cars-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" disabled) Двигатель
+            .dropdown-menu(aria-labelledby="filter-cars-dropdown")
+              .dropdown-menu__header.mb-2.bs-searchbox
+                input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
+              .dropdown-menu__body
+                ul.dropdown-menu__list
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 1
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 2
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 3
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 4
+                  li.dropdown-menu__list-item
+                    a.dropdown-menu__list-option(role="option") Значение 5
+      .px-md-4.px-3
+        .h5.mb-3 Наиболее популярные:
+        .text-center.mb-xl-5.mb-4
+          a.d-inline-block.mr-3.mb-3(href="#")
+            +img('content/logo/acura.jpg')
+          a.d-inline-block.mr-3.mb-3(href="#")
+            +img('content/logo/toyota.jpg')
+          a.d-inline-block.mr-3.mb-3(href="#")
+            +img('content/logo/suzuki.jpg')
+          a.d-inline-block.mr-3.mb-3(href="#")
+            +img('content/logo/nissan.jpg')
+          a.d-inline-block.mr-3.mb-3(href="#")
+            +img('content/logo/bmw.jpg')
+          a.d-inline-block.mr-3.mb-3(href="#")
+            +img('content/logo/fiat.jpg')
+          a.d-inline-block.mr-3.mb-3(href="#")
+            +img('content/logo/mazda.jpg')
+          a.d-inline-block.mr-3.mb-3(href="#")
+            +img('content/logo/lexus.jpg')
+          a.d-inline-block.mr-3.mb-3(href="#")
+            +img('content/logo/mitsubishi.jpg')
+          a.d-inline-block.mr-3.mb-3(href="#")
+            +img('content/logo/infiniti.jpg')
+        .results-row
+          a.d-block.text-center.mb-4(href="#")
+            span.result-item__pic
+              +img('content/results/car-1.jpg')
+            span.result-item__title.px-lg-2.px-1 Honda CR-V Car Sport внедорожник Toyota RAV4
+          a.d-block.text-center.mb-4(href="#")
+            span.result-item__pic
+              +img('content/results/car-2.jpg')
+            span.result-item__title.px-lg-2.px-1 Honda CR-V Car Sport внедорожник Toyota RAV4
+          a.d-block.text-center.mb-4(href="#")
+            span.result-item__pic
+              +img('content/results/car-1.jpg')
+            span.result-item__title.px-lg-2.px-1 Honda CR-V Car Sport внедорожник Toyota RAV4
+          a.d-block.text-center.mb-4(href="#")
+            span.result-item__pic
+              +img('content/results/car-2.jpg')
+            span.result-item__title.px-lg-2.px-1 Honda CR-V Car Sport внедорожник Toyota RAV4
+          a.d-block.text-center.mb-4(href="#")
+            span.result-item__pic
+              +img('content/results/car-1.jpg')
+            span.result-item__title.px-lg-2.px-1 Honda CR-V Car Sport внедорожник Toyota RAV4
+    .px-md-4.px-3.pb-3
+      .row
+        .d-flex.flex-wrap.col-xl-6
+          a.d-flex.align-items-center.h5.text-nowrap.mr-5.mb-2.mb-xl-0(href="#")
+            +icon('tires','contacts__icon h3 color-theme-brand mr-2')
+            | Подборать шины
+          a.d-flex.align-items-center.h5.text-nowrap.mb-2.mb-xl-0(href="#")
+            +icon('wheels','contacts__icon h3 color-theme-brand mr-2')
+            | Подборать диски
+        .col-xl-6.d-sm-flex.justify-content-xl-end.text-center.text-sm-left
+          button.btn.text-uppercase.px-4(type="button") Сохранить изменения
