--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -19,6 +19,7 @@ $color__border: #E1DDDD;
 
 $color__info: #30D3CA;
 $color__disabled: #A1A1A1;
+//$color__disabled: #E1DDDD;
 $color__success: #61BD2B;
 $color__warning: #F3CA2C;
 $color__danger: #EB5757;
